optimize 健壮性处理